# M-WM-LCD_2023Dec19

lcd project format/: README.md  desktop.ini  lcd .xlsx
lcd project format/1_State_Machine/: State_Machine.vsdx  desktop.ini
lcd project format/2_Circuit/: desktop.ini
lcd project format/4_Simulator/: desktop.ini
lcd project format/5_Source_Code/: desktop.ini
lcd project format/6_Flash_Code/: desktop.ini
lcd project format/7_Refrences/: desktop.ini
lcd_code/: .gitignore  .gitmodules  CMakeLists.txt  sdkconfig  sdkconfig.old
lcd_code/components/: hal_err.h  lv_conf.h
lcd_code/components/APP/: CMakeLists.txt  filelist.txt  lcd.c  lcd.h  lcd_attachment.h  lcd_user.h  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
lcd_code/components/DRIVERS/: CMakeLists.txt  driver_err.h  std_types.h  utils.h
lcd_code/components/DRIVERS/esp32/i2s/: i2s_lcd.c  i2s_lcd.h
lcd_code/components/DRIVERS/esp32s2/i2s/: i2s_lcd.c  i2s_lcd.h  i2s_lcd_types.h
lcd_code/components/MCAL/: CMakeLists.txt  mcal.c  mcal.h  mcal_err.h
lcd_code/components/MCAL/esp32s2/i2c_manager/: i2c_manager.c  i2c_manager.h  i2c_manager_cfg.h
lcd_code/components/MCAL/esp32s2/inc/: mcal_esp32s2.h
lcd_code/components/MCAL/esp32s2/src/: mcal_esp32s2_comm8080.c
lcd_code/components/MCAL/esp32s2/uart/: uart.c  uart.h  uart_cfg.h  uart_const.h
lcd_code/components/MVP/: CMakeLists.txt  model.c  model.h  presenter.c  presenter.h
lcd_code/components/OS/: CMakeLists.txt  error_codes.h  tt_cfg.h  tt_scheduler.c  tt_scheduler.h
lcd_code/main/: CMakeLists.txt  main.c
(+50 files in other folders)
